--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">表情包生成器</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="my_picture">我的图片</string>
+    <string name="emoji_three_rounds_of_send">表情三连发</string>
+    <string name="settings">设置</string>
+    <string name="about">关于</string>
+
 </resources>
