--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">表情包生成器</string>
+
+    <string name="transition_name_secret">secret</string>
+
 </resources>
