--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <string name="transition_name_secret">secret</string>
 
+    <string name="floating_button_behavior">com.android.emoticoncreater.utils.FloatingButtonBehavior</string>
+
 </resources>
